# azure-convention-assistant

./: .azuureignore  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit.sh  test.py  upload_templates.sh
.github/workflows/: main_azure-convention-assistant.yml  main_azure-guideline-assistant.yml
app/: ai_search.py  app.py
app/prompt/: code-search-prompt.md  comment-prompt.md
sample-code/: build.gradle  test-order.http  test-product.http
sample-code/src/main/java/com/example/manager/: ServletInitializer.java
sample-code/src/main/java/com/example/manager/controller/: OrderController.java  ProductController.java
sample-code/src/main/java/com/example/manager/model/: Order.java  Product.java
sample-code/src/main/java/com/example/manager/repository/: OrderRepository.java  OrderRepositoryImpl.java  ProductRepository.java  ProductRepositoryImpl.java
sample-code/src/main/java/com/example/manager/service/: OrderService.java  OrderServiceImpl.java  ProductService.java  ProductServiceImpl.java
sample-code/src/main/resources/: order.json  products.json
template/: template-common-comment.md  template-controller-comment.md  template-model-comment.md
templates/: java-common-comment.md  java-controller-comment.md  java-model-comment.md
